# casc-extractor

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: cliff.yml  release.yml
crates/casc-cli/: Cargo.toml
crates/casc-cli/src/: main.rs
crates/casc-lib/: Cargo.toml
crates/casc-lib/src/config/: build_info.rs
crates/casc-lib/src/extract/: pipeline.rs
crates/casc-lib/src/listfile/: downloader.rs
