[package]
name = "casc-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for extracting files from World of Warcraft CASC archives"
license = "MIT"
authors = ["Xerrion"]
repository = "https://github.com/Xerrion/casc-extractor"
homepage = "https://github.com/Xerrion/casc-extractor"
readme = "../../README.md"
keywords = ["casc", "wow", "blizzard", "cli", "extractor"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
name = "casc-extractor"
path = "src/main.rs"

[dependencies]
casc-lib = { path = "../casc-lib", version = "0.1.0" }
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
